# sql-agent

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/db_postgres/: optimized_graph.py  optimized_node.py  optimized_prompts.py
src/db_sqlite/: agent_tool.py  graph.py  node.py  prompts.py  server.py  supervisor.py
src/db_sqlite_v2/: graph.py  index_schemas.py  node.py  prompts.py
src/db_sqlite_v3/: graph.py  node.py
src/open_ai/: test.py  test_openai_sdk.py  test_qdran.py
src/test_agent/: graph.py  node.py  prompts.py  test.py  test_v2.py
