[project]
name = "project-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph-cli[inmem]>=0.4.2",
    "langgraph-sdk>=0.2.6",
    "langgraph[cli]>=0.6.7",
    "openai-agents>=0.3.1",
    "pandas>=2.3.2",
    "pip>=25.2",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.12",
]
